--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #2848: Add support for standard &lt;listagg overflow clause&gt;
+</li>
 <li>Issue #2858: Throw 22001 on attempt to use getString() or getBytes() on LOB object longer than 1,048,576
 chars/octets
 </li>
