Fix a typo and update changelog

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>PR #2869: Normalize binary geometry literals and improve EWKB representation of POLYGON EMPTY
+</li>
 <li>Issue #2860: CHAR columns in PgCatalogTable have incorrect length
 </li>
 <li>Issue #2848: Add support for standard &lt;listagg overflow clause&gt;
