--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #2866: New INFORMATION_SCHEMA should not use keywords as column names
+</li>
 <li>Issue #2867: PageStore + Lazy + INSERT ... SELECT cause infinite loop
 </li>
 <li>PR #2869: Normalize binary geometry literals and improve EWKB representation of POLYGON EMPTY
