--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #2878: Disallow spatial indexes in PageStore databases
+</li>
 <li>PR #2874: Use 64-bit row counts in results and other changes
 </li>
 <li>Issue #2866: New INFORMATION_SCHEMA should not use keywords as column names
