--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,10 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #2882: NPE in UPDATE with SELECT UNION
+</li>
+<li>PR #2881: Store users and roles together and user-defined functions and aggregates together
+</li>
 <li>Issue #2878: Disallow spatial indexes in PageStore databases
 </li>
 <li>PR #2874: Use 64-bit row counts in results and other changes
