--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #2846: GRANT SELECT, INSERT, UPDATE, DELETE incorrectly gives privileges to drop a table
+</li>
 <li>Issue #2882: NPE in UPDATE with SELECT UNION
 </li>
 <li>PR #2881: Store users and roles together and user-defined functions and aggregates together
