--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,7 +21,11 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #2894: NPE in DROP SCHEMA when unique constraint is removed before linked referential constraint
+</li>
 <li>Issue #2888: H2 should pass time zone of client to the server
+</li>
+<li>PR #2890: Fixed possible eternal wait(0)
 </li>
 <li>Issue #2846: GRANT SELECT, INSERT, UPDATE, DELETE incorrectly gives privileges to drop a table
 </li>
