Add support for partial transfers of result sets to PgServerThread

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #2901: PgServer returns less rows when fetchSize is set
+</li>
 <li>Issue #2894: NPE in DROP SCHEMA when unique constraint is removed before linked referential constraint
 </li>
 <li>Issue #2888: H2 should pass time zone of client to the server
