Add implementation of DatabaseMetaData.getPseudoColumns()

--- a/h2/src/docsrc/html/tutorial.html
+++ b/h2/src/docsrc/html/tutorial.html
@@ -299,7 +299,7 @@ otherwise they are not parsed correctly. If in doubt, add <code>;</code> before 
             @attributes, @best_row_identifier, @catalogs, @columns,
             @column_privileges, @cross_references, @exported_keys,
             @imported_keys, @index_info,  @primary_keys, @procedures,
-            @procedure_columns, @schemas, @super_tables, @super_types,
+            @procedure_columns, @pseudo_columns, @schemas, @super_tables, @super_types,
             @tables, @table_privileges, @table_types, @type_info, @udts,
             @version_columns
             </code>
