Throw exception when both fileName and fileStore are specified

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #2923: Combination of fileName() with fileStore() should throw an exception
+</li>
 <li>Issue #2928: JSON_ARRAYAGG and all NULL values
 </li>
 <li>PR #2918: Removal of unnecessary lock
