--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,10 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #2936: Add data type conversion code from datetime and UUID values to JSON
+</li>
+<li>Issue #2935: ENUM ARRAY isn't read properly from persisted data
+</li>
 <li>Issue #2923: Combination of fileName() with fileStore() should throw an exception
 </li>
 <li>Issue #2928: JSON_ARRAYAGG and all NULL values
