Add standard Unicode character string literals and identifiers

--- a/h2/src/docsrc/html/advanced.html
+++ b/h2/src/docsrc/html/advanced.html
@@ -692,6 +692,8 @@ The following tokens are keywords in H2:
 <td>CS</td><td>+</td><td>+</td><td>+</td><td>+</td><td>+</td><td>+</td></tr>
 <tr><td>TRUE</td>
 <td>+</td><td>+</td><td>+</td><td>+</td><td>+</td><td>+</td><td>+</td></tr>
+<tr><td>UESCAPE</td>
+<td>+</td><td></td><td></td><td>+</td><td>+</td><td>+</td><td>+</td></tr>
 <tr><td>UNION</td>
 <td>+</td><td>+</td><td>+</td><td>+</td><td>+</td><td>+</td><td>+</td></tr>
 <tr><td>UNIQUE</td>
