Prevent incorrect index conditions with incompatible ordering rules

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #2812: Unexpected result for query that compares an integer with a string
+</li>
 <li>Issue #2936: Add data type conversion code from datetime and UUID values to JSON
 </li>
 <li>Issue #2935: ENUM ARRAY isn't read properly from persisted data
