Add documentation for tables of INFORMATION_SCHEMA

--- a/h2/src/docsrc/html/systemtables.html
+++ b/h2/src/docsrc/html/systemtables.html
@@ -67,6 +67,7 @@ because they can't work with the new one. The legacy version is not documented.
 
 <c:forEach var="item" items="informationSchema">
 <h3 class="notranslate" id="${item.link}">${item.table}</h3>
+<p class="notranslate">${item.description}</p>
 <table class="main">
 <tbody>
 ${item.columns}
