--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,10 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>PR #2951: Add documentation for INFORMATION_SCHEMA
+</li>
+<li>PR #2943: some small prep for next release
+</li>
 <li>PR #2948: Add support of Infinity, -Infinity, and NaN to DECFLOAT data type
 </li>
 <li>Issue #2947: Encoding of Unicode and special characters in error messages
