Update URLs of mailing lists and update changelog

--- a/h2/src/docsrc/html/build.html
+++ b/h2/src/docsrc/html/build.html
@@ -214,7 +214,7 @@ If you'd like to contribute bug fixes or new features, please consider the follo
 <p>
 For legal reasons, patches need to be public in the form of an
     <a href="https://github.com/h2database/h2database/issues">issue report or attachment</a> or in the form of an email
-    to the <a href="https://groups.google.com/forum/#!forum/h2-database">group</a>.
+    to the <a href="https://groups.google.com/g/h2-database">group</a>.
 Significant contributions need to include the following statement:
 </p>
 <p>
@@ -257,7 +257,7 @@ or if  you have a feature request:
     <a href="https://www.google.com/drive/">Google Drive</a>.
 </li><li>Google Group versus issue tracking:
     Use the
-    <a href="https://groups.google.com/forum/#!forum/h2-database">Google Group</a>
+    <a href="https://groups.google.com/g/h2-database">Google Group</a>
     for questions or if you are not sure it's a bug.
     If you are sure it's a bug, you can create an
     <a href="https://github.com/h2database/h2database/issues">issue</a>,
