--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>PR #2955: Prevent incorrect index sorting
+</li>
 <li>PR #2951: Add documentation for INFORMATION_SCHEMA
 </li>
 <li>PR #2943: some small prep for next release
