--- a/h2/src/docsrc/html/fragments.html
+++ b/h2/src/docsrc/html/fragments.html
@@ -90,7 +90,7 @@ translate -->
 <b>Support</b><br />
 <a href="faq.html">FAQ</a><br />
 <a href="sourceError.html">Error Analyzer</a><br />
-<a href="https://groups.google.com/forum/#!forum/h2-database">Google Group</a><br />
+<a href="https://groups.google.com/g/h2-database">Google Group</a><br />
 <br />
 <b>Appendix</b><br />
 <a href="history.html">History</a><br />
