--- a/h2/src/docsrc/html/links.html
+++ b/h2/src/docsrc/html/links.html
@@ -36,7 +36,7 @@ If you want to add a link, please send it to the support email address or post i
 
 <h2 id="quotes">Quotes</h2>
 <p>
-<a href="https://groups.google.com/forum/#!topic/h2-database/re4CS4r4WTE">
+<a href="https://groups.google.com/g/h2-database/c/re4CS4r4WTE">
 Quote</a>:
 "This is by far the easiest and fastest database that I have ever used.
 Originally the web application that I am working on is using SQL server.
