--- a/h2/src/docsrc/html/mainWeb.html
+++ b/h2/src/docsrc/html/mainWeb.html
@@ -61,7 +61,7 @@ Welcome to H2, the Java SQL database. The main features of H2 are:
                 <h2 style="margin-top: 1em;">Support</h2>
                 <p>
                     <a href="https://stackoverflow.com/questions/tagged/h2">Stack Overflow (tag H2)</a><br /><br />
-                    <a href="https://groups.google.com/forum/#!forum/h2-database">Google Group</a><br /><br />
+                    <a href="https://groups.google.com/g/h2-database">Google Group</a><br /><br />
                     For non-technical issues, use: <br />
                     <script type="text/javascript">
                     <!--
@@ -102,7 +102,7 @@ Welcome to H2, the Java SQL database. The main features of H2 are:
             or <a href="https://h2database.com/html/newsfeed-rss.xml">Header only (RSS)</a>.
             </p><p>
                 <b>Email Newsletter:</b> Subscribe to
-                <a href="https://groups.google.com/forum/#!forum/h2database-news/join">
+                <a href="https://groups.google.com/g/h2database-news">
                 H2 Database News (Google account required)</a>
                 to get informed about new releases.
                 Your email address is only used in this context.
