Fix regression caused by beaa4613957b446559fdfbd8cb14301026c7d609

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #2958: TableLink is broken for Oracle database after pull request #2903
+</li>
 <li>PR #2955: Prevent incorrect index sorting
 </li>
 <li>PR #2951: Add documentation for INFORMATION_SCHEMA
