PostgreSQL compatibility: UPDATE with FROM.

--- a/h2/src/docsrc/html/features.html
+++ b/h2/src/docsrc/html/features.html
@@ -1031,6 +1031,7 @@ Do not change value of DATABASE_TO_LOWER after creation of database.
 </li><li>Datetime value functions return the same value within a transaction.
 </li><li>ARRAY_SLICE() out of bounds parameters are silently corrected.
 </li><li>EXTRACT function with DOW field returns (0-6), Sunday is 0.
+</li><li>UPDATE with FROM is supported.
 </li></ul>
 
 <h2 id="auto_reconnect">Auto-Reconnect</h2>
