Update changelog and fix building of documentation

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,36 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3003: CREATE TABLE ... AS SELECT ... FROM creates invalid column definition when aggregate functions are used
+</li>
+<li>Issue #3008: TestCrashAPI: Exception in Arrays.sort() called by LocalResult.done()
+</li>
+<li>Issue #3006 / PR #3007: Unlock meta during query execution in CREATE TABLE AS query
+</li>
+<li>PR #3001: PostgreSQL compatibility: UPDATE with FROM
+</li>
+<li>PR #2998: Fix off-by-one error with -webAdminPassword in Server
+</li>
+<li>PR #2995: Add FETCH_SIZE clause to CREATE LINKED TABLE
+</li>
+<li>Issue #2907 / PR #2994: Prevent "Chunk not found" on LOB operations
+</li>
+<li>PR #2993: Update copyright years
+</li>
+<li>Issue #2991: TestCrashAPI: NPE in ScriptCommand.dumpDomains()
+</li>
+<li>Issue #2950 / PR #2987: Issue commit() right before "non-transactional" DDL command starts
+</li>
+<li>PR #2980: Assorted minor changes
+</li>
+<li>PR #2966: H2 2.0.201: Linked Tables freeze the Database and freeze the Server Process
+</li>
+<li>Issue #2972: Memory leak due to negative Page memory in the MVStore
+</li>
+<li>PR #2971: create skeleton of migration to V2 document
+</li>
+<li>Issue #2967: MVStore: averageSize int overflow in the class ObjectDataType
+</li>
 <li>Issue #2963: Syntax error for large hexadecimal constants with DATABASE_TO_UPPER=false
 </li>
 <li>Issue #2961: Accept CREATE PRIMARY KEY only in metadata or in quirks mode
