--- a/h2/src/docsrc/html/migration-to-v2.html
+++ b/h2/src/docsrc/html/migration-to-v2.html
@@ -25,7 +25,7 @@ Migration to 2.0
     Upgrading</a><br />
 <a href="#format">
     File Format</a><br />
-<a href="#datestimes">
+<a href="#datetime">
     Date / Time / Timestamp</a><br />
 <a href="#general">
     General</a><br />
@@ -55,11 +55,12 @@ Then create a fresh database <bold>USING THE NEW VERSION OF H2</bold>, then perf
 <h2 id="format">MVStore file format</h2>
 
 <p>
-The MVStore file format we use (i.e. the default) is still mostly the same, but some subtle changes have been made to the undologs,
+The MVStore file format we use (i.e. the default) is still mostly the same, but some subtle changes have been made
+to the undo logs,
 for the purposes of improving crash safety and also read/write performance.
 </p>
 
-<h2 id="datestimes">Date / Time / Timestamp</h2>
+<h2 id="datetime">Date / Time / Timestamp</h2>
 
 <p>
 TODO - Correctness.
@@ -68,7 +69,8 @@ TODO - Correctness.
 <h2 id="general">General</h2>
 
 <p>
-There are a lot more SQL keywords now. Many SQL statements feature far better support of SQL-Standard behaviour. Some old non-standard SQL syntax support has been removed.
+There are a lot more SQL keywords now. Many SQL statements feature far better support of SQL-Standard behaviour.
+Some old non-standard SQL syntax support has been removed.
 </p>
 
 <!-- [close] { --></div></td></tr></table><!-- } --><!-- analytics --></body></html>
