Fix issues with precision and scale of ROUND() and TRUNC() results

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3017: ROUND() does not set correct precision and scale of result
+</li>
 <li>Issue #3003: CREATE TABLE ... AS SELECT ... FROM creates invalid column definition when aggregate functions are used
 </li>
 <li>Issue #3008: TestCrashAPI: Exception in Arrays.sort() called by LocalResult.done()
