Switch from Travis CI to GitHub Workflows

--- a/h2/src/docsrc/html/build.html
+++ b/h2/src/docsrc/html/build.html
@@ -276,8 +276,8 @@ or if  you have a feature request:
 <p>
 This build process is automated and runs regularly.
 The build process includes running the tests and code coverage, using the command line
-<code>./build.sh jar testTravis</code>.
-The results are available on <a href="https://travis-ci.org/h2database/h2database/branches">Travis CI</a>.
+<code>./build.sh jar testCI</code>.
+The results are available on <a href="https://github.com/h2database/h2database/actions?query=workflow%3ACI">CI workflow</a> page.
 </p>
 
 <h2 id="railroad">Generating Railroad Diagrams</h2>
