Fix exception in SYSTEM_RANGE with step as parameter

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,20 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3046: SYSTEM_RANGE can't handle bind variable as step size and produces wrong error message
+</li>
+<li>Issue #3033: NPE during BLOB read after 2PC rollback
+</li>
+<li>PR #3034: Don't evaluate ValueTimestampTimeZone at begin and end of each command
+</li>
+<li>PR #3029: Optimize row storage in MVStore and other changes
+</li>
+<li>PR #3028: Remove back compatibility
+</li>
+<li>PR #3025: Switch from Travis CI to GitHub Workflows
+</li>
+<li>PR #3024: Add initial version of upgrade utility
+</li>
 <li>Issue #3017: ROUND() does not set correct precision and scale of result
 </li>
 <li>Issue #3003: CREATE TABLE ... AS SELECT ... FROM creates invalid column definition when aggregate functions are used
