Throw exceptions from Java primitive value getters of ValueNull

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3049: Java value getters of ValueNull should throw exceptions
+</li>
 <li>Issue #3046: SYSTEM_RANGE can't handle bind variable as step size and produces wrong error message
 </li>
 <li>Issue #3033: NPE during BLOB read after 2PC rollback
