--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,10 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3059: ALTER TABLE DROP CONSTRAINT doesn't check owner of constraint
+</li>
+<li>Issue #3054: Add binary set aggregate functions
+</li>
 <li>Issue #3049: Java value getters of ValueNull should throw exceptions
 </li>
 <li>Issue #3046: SYSTEM_RANGE can't handle bind variable as step size and produces wrong error message
