--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>PR #3062: Add ALTER DOMAIN RENAME CONSTRAINT command
+</li>
 <li>Issue #3059: ALTER TABLE DROP CONSTRAINT doesn't check owner of constraint
 </li>
 <li>Issue #3054: Add binary set aggregate functions
