Restrict vendor-specific identity columns to related compatibility modes

--- a/h2/src/docsrc/html/features.html
+++ b/h2/src/docsrc/html/features.html
@@ -952,6 +952,7 @@ Do not change value of DATABASE_TO_LOWER after creation of database.
 </li><li>If value of an identity column was manually specified, its sequence is updated to generate values after
 inserted.
 </li><li>NULL value works like DEFAULT value is assignments to identity columns.
+</li><li>AUTO_INCREMENT clause can be used.
 </li><li>YEAR data type is treated like SMALLINT data type.
 </li></ul>
 <p>
@@ -989,6 +990,7 @@ inserted.
 </li><li>NULL value works like DEFAULT value is assignments to identity columns.
 </li><li>Referential constraints don't require an existing primary key or unique constraint on referenced columns
 and create a unique constraint automatically if such constraint doesn't exist.
+</li><li>AUTO_INCREMENT clause can be used.
 </li><li>YEAR data type is treated like SMALLINT data type.
 </li></ul>
 <p>
@@ -1041,6 +1043,7 @@ Do not change value of DATABASE_TO_LOWER after creation of database.
     <li>does not throw an exception when the <code>flagsString</code> parameter contains a 'g';</li>
     <li>replaces only the first matched substring in the absence of the 'g' flag in the <code>flagsString</code> parameter.</li>
     </ul>
+</li><li>Legacy SERIAL and BIGSERIAL data types are supported.
 </li><li>ON CONFLICT DO NOTHING is supported in INSERT statements.
 </li><li>Spaces are trimmed from the right side of CHAR values, but CHAR values in result sets are right-padded with
     spaces to the declared length.
