--- a/h2/src/docsrc/html/features.html
+++ b/h2/src/docsrc/html/features.html
@@ -959,6 +959,7 @@ inserted.
 </li><li>LIMIT / OFFSET clauses are supported.
 </li><li>AUTO_INCREMENT clause can be used.
 </li><li>YEAR data type is treated like SMALLINT data type.
+</li><li>Use index in GROUP BY clause to refer to the column position in the SELECT list.
 </li></ul>
 <p>
 Text comparison in MariaDB is case insensitive by default, while in H2 it is case sensitive (as in most other databases).
@@ -998,6 +999,7 @@ and create a unique constraint automatically if such constraint doesn't exist.
 </li><li>LIMIT / OFFSET clauses are supported.
 </li><li>AUTO_INCREMENT clause can be used.
 </li><li>YEAR data type is treated like SMALLINT data type.
+</li><li>Use index in GROUP BY clause to refer to the column position in the SELECT list.
 </li></ul>
 <p>
 Text comparison in MySQL is case insensitive by default, while in H2 it is case sensitive (as in most other databases).
@@ -1059,6 +1061,7 @@ Do not change value of DATABASE_TO_LOWER after creation of database.
 </li><li>ARRAY_SLICE() out of bounds parameters are silently corrected.
 </li><li>EXTRACT function with DOW field returns (0-6), Sunday is 0.
 </li><li>UPDATE with FROM is supported.
+</li><li>Use index in GROUP BY clause to refer to the column position in the SELECT list.
 </li></ul>
 
 <h2 id="auto_reconnect">Auto-Reconnect</h2>
