--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,14 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>PR #3077: Add CREATE UNIQUE INDEX ... INCLUDE
+</li>
+<li>Issue #3061 / PR #3074: GROUP BY using column index for MySQL/MariaDB/PostgreSQL compatibility modes
+</li>
+<li>PR #3067: Restrict identity data types and result limitation clauses to compatibility modes
+</li>
+<li>PR #3065: Remove duplicate method IOUtils.getBufferedReader
+</li>
 <li>Issue #3055: Phantom table leftover after INSERT .. WITH
 </li>
 <li>PR #3062: Add ALTER DOMAIN RENAME CONSTRAINT command
