Check mask in TableFilter.removeUnusableIndexConditions()

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,10 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3080: Complex Query returns different results depending on the number of arguments in the IN clause
+</li>
+<li>Issue #3066: Very high DB opening/closing times
+</li>
 <li>PR #3077: Add CREATE UNIQUE INDEX ... INCLUDE
 </li>
 <li>Issue #3061 / PR #3074: GROUP BY using column index for MySQL/MariaDB/PostgreSQL compatibility modes
