--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>PR #3096: Add separate LOB data layer for values
+</li>
 <li>Issue #3093: ROWNUM filter doesn't work with more than one table
 </li>
 <li>PR #3087: Add "CONVERT TO CHARACTER SET" to compatibility modes
